Fix footnote anchors
Footnote anchors were scrolling under the fixed header. Additionally
resized the expandable dropdowns to avoid overlap on mobile.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -112,6 +112,10 @@ $navbar-breakpoint: 45em !default; // defaults to 720px @ 16px base font size
 }
 
 /// FLUID TYPOGRAPHY & VERTICAL RHYTHM
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     @extend %font-sans;
 	@include interpolate((
@@ -1221,7 +1225,16 @@ table:not(.lntable) {
     font-weight: bold;
     padding-left: 0.2rem;
 
+    &:target {
+       padding-top: 1rem;
+
+       @include toggle-navbar {
+           padding-top: 5rem;
+       }
+    }
+
     > a {
+
         &:before { 
             content: "\005B";
         }
@@ -1699,11 +1712,7 @@ li[id^='fn:'] {
 // contact form
 .contactform {
     #contact-toggle:checked ~ form {
-       height: 23rem;
-
-       @include toggle-navbar {
-           height: 27rem;
-       }
+       height: 30rem;
     }
 
     .gotcha {
@@ -1737,7 +1746,7 @@ li[id^='fn:'] {
     }
 
     textarea {
-        height: 8rem;
+        height: 80%;
         overflow: auto;
     }
 }
@@ -1752,11 +1761,7 @@ li[id^='fn:'] {
     }
 
     #maillist-toggle:checked ~ form {
-       height: 16.5rem;
-
-       @include toggle-navbar {
-           height: 21rem;
-       }
+       height: 25rem;
     }
 
     .consent {
